--- a/css/index.css
+++ b/css/index.css
@@ -126,3 +126,111 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 1400px;
+  background-color: aqua;
+}
+.section1 {
+  background-color: blue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+}
+.section1 header {
+  background-color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  height: 10%;
+}
+.section1 header nav {
+  background-color: yellow;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.section1 header nav figure {
+  background-color: firebrick;
+  width: 20%;
+}
+.section1 header nav figure img {
+  width: 25%;
+  height: auto;
+}
+.section1 header nav ul {
+  background-color: aquamarine;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.section1 header nav ul li {
+  margin: 0 2%;
+}
+.section1 .banner {
+  background-color: blanchedalmond;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.section1 .banner .bannerText {
+  background-color: olive;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  width: 50%;
+}
+.section1 .banner .bannerText h1 {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 400%;
+  line-height: 106%;
+  /* or 64px */
+  display: flex;
+  align-items: center;
+  color: #000000;
+}
+.section1 .banner .bannerText h3 {
+  font-family: Raleway, "Rajdhani";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 125%;
+  line-height: 162.5%;
+  /* or 25px*/
+  display: flex;
+  align-items: center;
+  letter-spacing: -0.1px;
+  margin-top: 2%;
+  color: #000000;
+}
+.section1 .banner .bannerText figure {
+  background-color: tomato;
+  width: 100%;
+  margin-top: 10%;
+}
+.section1 .banner .bannerText figure img {
+  width: 25%;
+  height: auto;
+}
+.section1 .banner .bannerBackgroundImage {
+  background-color: indigo;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.section1 .banner .bannerBackgroundImage img {
+  width: 50%;
+  height: auto;
+}
