add about-us style

--- a/less/index.less
+++ b/less/index.less
@@ -142,3 +142,84 @@
         }
     }
 }
+
+
+main {
+    background-color: hotpink;
+    width: 80%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    .mainArticle1 {
+        background-color: rosybrown;
+     
+        width: 100%;
+
+        header {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+
+            h2 {
+                font-family: Raleway;
+                font-style: normal;
+                font-weight: 800;
+                font-size: 44px;
+                line-height: 50px;
+                /* identical to box height, or 114% */
+
+                display: flex;
+                align-items: center;
+                text-align: center;
+
+                color: #2F2F2F;
+            }
+
+            p {
+                font-family: Raleway;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 18px;
+                line-height: 28px;
+                /* or 156% */
+
+                display: flex;
+                align-items: center;
+                text-align: center;
+
+                color: #747E80;
+
+            }
+        }
+
+        div {
+            background-color: orange;
+
+            display: flex;
+            align-content: center;
+            justify-content: center;
+            flex-wrap: wrap;
+
+            figure {
+                background-color: forestgreen;
+
+                display: flex;
+                align-content: center;
+                justify-content: center;
+                flex-direction: column;
+                width: 320px;
+                // padding: 2%;
+                margin: 2%;
+
+                img {
+                    
+                }
+            }
+        }
+
+    }
+}
