--- a/css/index.css
+++ b/css/index.css
@@ -234,3 +234,61 @@ table {
   width: 50%;
   height: auto;
 }
+main {
+  background-color: hotpink;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+main .mainArticle1 {
+  background-color: rosybrown;
+  width: 100%;
+}
+main .mainArticle1 header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+main .mainArticle1 header h2 {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 44px;
+  line-height: 50px;
+  /* identical to box height, or 114% */
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #2F2F2F;
+}
+main .mainArticle1 header p {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
+  /* or 156% */
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #747E80;
+}
+main .mainArticle1 div {
+  background-color: orange;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+main .mainArticle1 div figure {
+  background-color: forestgreen;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 320px;
+  margin: 2%;
+}
