--- a/less/index.less
+++ b/less/index.less
@@ -117,7 +117,7 @@
                 background-color: tomato;
 
                 width: 100%;
-                margin-top: 10%;
+                margin-top: 25%;
 
                 img {
                     width: 25%;
@@ -135,9 +135,8 @@
             justify-content: flex-end;
 
             img {
-                width: 50%;
+                width: auto;
                 height: auto;
-
             }
         }
     }
@@ -155,8 +154,8 @@ main {
 
     .mainArticle1 {
         background-color: rosybrown;
-     
-        width: 100%;
+        
+        // width: 100%;
 
         header {
             display: flex;
@@ -218,6 +217,95 @@ main {
                 img {
                     
                 }
+            }
+        }
+    }
+
+    .mainArticle2 {
+        // display: flex;
+        // align-content: center;
+        // justify-content: center;
+        // flex-direction: column;
+        background-color: crimson;
+        width: 100%;
+
+        header {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+
+            h2 {
+                font-family: Raleway;
+                font-style: normal;
+                font-weight: 800;
+                font-size: 44px;
+                line-height: 50px;
+                /* identical to box height, or 114% */
+
+                display: flex;
+                align-items: center;
+                text-align: center;
+
+                color: #2F2F2F;
+            }
+        }
+
+        div {
+            background-color: greenyellow;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            aside {
+                background-color: rgb(107, 52, 133);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+
+                div {
+                    background-color: rgb(149, 203, 224);
+                    display: flex;
+                    align-items: flex-start;
+                    justify-content: center;
+                    flex-direction: column;
+                    margin: 6% 0;
+                    // padding: 2%;
+
+                    h3 {
+                        font-family: Raleway;
+                        font-style: normal;
+                        font-weight: bold;
+                        font-size: 22px;
+                        line-height: 28px;
+                        /* identical to box height, or 127% */
+
+                        display: flex;
+                        align-items: center;
+
+                        color: #000000;
+                    }
+
+                    p {
+                        font-family: Raleway;
+                        font-style: normal;
+                        font-weight: 500;
+                        font-size: 18px;
+                        line-height: 28px;
+                        /* or 156% */
+
+
+                        color: #747E80;
+
+                    }
+                }
+            }
+
+            figure {
+                 background-color: green;
+                 
+                 margin: 5%;
             }
         }
 
