--- a/css/index.css
+++ b/css/index.css
@@ -126,6 +126,11 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+input,
+button {
+  padding: 0;
+  margin: 0;
+}
 .wrapper {
   display: flex;
   align-items: center;
@@ -291,6 +296,33 @@ main .mainArticle1 div figure {
   width: 320px;
   margin: 2%;
 }
+main .mainArticle1 div figure figcaption {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  /* identical to box height */
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  text-align: center;
+  letter-spacing: 2px;
+  color: #000000;
+}
+main .mainArticle1 div figure p {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  /* or 162% */
+  display: flex;
+  align-items: center;
+  text-align: center;
+  mix-blend-mode: normal;
+  opacity: 0.9;
+}
 main .mainArticle2 {
   background-color: crimson;
   width: 100%;
@@ -357,4 +389,142 @@ main .mainArticle2 div aside div p {
 main .mainArticle2 div figure {
   background-color: green;
   margin: 5%;
+}
+.contactUs {
+  background-color: darkred;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 80%;
+}
+.contactUs p {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 1.75px;
+  color: #747E80;
+  width: 50%;
+  text-align: center;
+}
+.contactUs figure {
+  background-color: sandybrown;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+}
+.contactUs figure img {
+  opacity: 0.25;
+}
+.contactUs hr {
+  width: 100%;
+  border: 1px solid #c2c2c2;
+}
+.contactUs h2 {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 50px;
+  /* identical to box height, or 114% */
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: -0.244444px;
+  color: #2F2F2F;
+}
+.contactUs .usersInfo {
+  background-color: green;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 60%;
+}
+.contactUs .usersInfo input {
+  background: #F3F3F3;
+  width: 180px;
+  padding: 2%;
+  border-radius: 40px;
+}
+.contactUs .usersInfo ::placeholder {
+  width: 138px;
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  display: flex;
+  align-items: flex-end;
+  color: #303234;
+  mix-blend-mode: normal;
+  opacity: 0.7;
+}
+.contactUs .usersInfo button {
+  background: #FFEB38;
+  border-radius: 40px;
+  width: 210px;
+  padding: 2%;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.198681);
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  text-align: center;
+  letter-spacing: 1.75px;
+  color: #000000;
+}
+footer {
+  background-color: violet;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  width: 80%;
+}
+footer div {
+  flex: 1;
+}
+footer div img {
+  width: 25%;
+  height: auto;
+}
+footer div p {
+  font-family: Playfair Display;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 26px;
+  /* or 162% */
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+  mix-blend-mode: normal;
+  opacity: 0.8;
+}
+footer div .boldP {
+  font-weight: bold;
+}
+footer .socialMedia {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+footer .socialMedia img {
+  background-color: #000000;
+  width: 7%;
+  margin-right: 10%;
+}
+footer .socialMedia .fb,
+footer .socialMedia .tbl {
+  background-color: orange;
+  width: 4%;
 }
