--- a/css/index.css
+++ b/css/index.css
@@ -136,7 +136,7 @@ button {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 1400px;
+  max-width: 1400px;
   background-color: aqua;
 }
 .section1 {
@@ -261,8 +261,8 @@ main .mainArticle1 header h2 {
   font-style: normal;
   font-weight: 800;
   font-size: 44px;
-  line-height: 50px;
-  /* identical to box height, or 114% */
+  line-height: 114%;
+  /* identical to box height, or 50px */
   display: flex;
   align-items: center;
   text-align: center;
@@ -291,9 +291,9 @@ main .mainArticle1 div figure {
   background-color: forestgreen;
   display: flex;
   align-content: center;
-  justify-content: center;
+  justify-content: stretch;
   flex-direction: column;
-  width: 320px;
+  max-width: 320px;
   margin: 2%;
 }
 main .mainArticle1 div figure figcaption {
@@ -309,14 +309,15 @@ main .mainArticle1 div figure figcaption {
   text-align: center;
   letter-spacing: 2px;
   color: #000000;
+  margin: 0 0 2% 0;
 }
 main .mainArticle1 div figure p {
   font-family: Raleway;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 26px;
-  /* or 162% */
+  line-height: 162%;
+  /* or 26px */
   display: flex;
   align-items: center;
   text-align: center;
@@ -338,8 +339,8 @@ main .mainArticle2 header h2 {
   font-style: normal;
   font-weight: 800;
   font-size: 44px;
-  line-height: 50px;
-  /* identical to box height, or 114% */
+  line-height: 114%;
+  /* identical to box height, or 50px*/
   display: flex;
   align-items: center;
   text-align: center;
@@ -362,17 +363,19 @@ main .mainArticle2 div aside div {
   background-color: #95cbe0;
   display: flex;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   margin: 6% 0;
+  max-width: 320px;
+  max-height: 200px;
 }
 main .mainArticle2 div aside div h3 {
   font-family: Raleway;
   font-style: normal;
   font-weight: bold;
   font-size: 22px;
-  line-height: 28px;
-  /* identical to box height, or 127% */
+  line-height: 127%;
+  /* identical to box height, or 28px */
   display: flex;
   align-items: center;
   color: #000000;
@@ -431,8 +434,8 @@ main .mainArticle2 div figure {
   font-style: normal;
   font-weight: 900;
   font-size: 44px;
-  line-height: 50px;
-  /* identical to box height, or 114% */
+  line-height: 114%;
+  /* identical to box height, or 50px */
   display: flex;
   align-items: center;
   text-align: center;
@@ -448,7 +451,7 @@ main .mainArticle2 div figure {
 }
 .contactUs .usersInfo input {
   background: #F3F3F3;
-  width: 180px;
+  max-width: 180px;
   padding: 2%;
   border-radius: 40px;
 }
@@ -468,7 +471,7 @@ main .mainArticle2 div figure {
 .contactUs .usersInfo button {
   background: #FFEB38;
   border-radius: 40px;
-  width: 210px;
+  max-width: 210px;
   padding: 2%;
   box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.198681);
   font-family: Raleway;
