--- a/less/index.less
+++ b/less/index.less
@@ -8,7 +8,8 @@
     justify-content: center;
     flex-direction: column;
 
-    width: 1400px;
+    max-width: 1400px;
+    // width: 100vw;
 
     background-color: aqua;
 }
@@ -168,8 +169,8 @@ main {
                 font-style: normal;
                 font-weight: 800;
                 font-size: 44px;
-                line-height: 50px;
-                /* identical to box height, or 114% */
+                line-height: 114%;
+                /* identical to box height, or 50px */
 
                 display: flex;
                 align-items: center;
@@ -208,15 +209,15 @@ main {
 
                 display: flex;
                 align-content: center;
-                justify-content: center;
+                justify-content: stretch;
                 flex-direction: column;
-                width: 320px;
+                max-width: 320px;
                 // padding: 2%;
                 margin: 2%;
 
-                img {
+                // img {
                     
-                }
+                // }
 
                 figcaption {
                     font-family: Raleway;
@@ -233,6 +234,7 @@ main {
                     letter-spacing: 2px;
 
                     color: #000000;
+                    margin: 0 0 2% 0;
                 }
                 
                 p {
@@ -240,8 +242,8 @@ main {
                     font-style: normal;
                     font-weight: 500;
                     font-size: 16px;
-                    line-height: 26px;
-                    /* or 162% */
+                    line-height: 162%;
+                    /* or 26px */
 
                     display: flex;
                     align-items: center;
@@ -275,8 +277,8 @@ main {
                 font-style: normal;
                 font-weight: 800;
                 font-size: 44px;
-                line-height: 50px;
-                /* identical to box height, or 114% */
+                line-height: 114%;
+                /* identical to box height, or 50px*/
 
                 display: flex;
                 align-items: center;
@@ -303,18 +305,20 @@ main {
                     background-color: rgb(149, 203, 224);
                     display: flex;
                     align-items: flex-start;
-                    justify-content: center;
+                    justify-content: flex-start;
                     flex-direction: column;
                     margin: 6% 0;
                     // padding: 2%;
+                    max-width: 320px;
+                    max-height: 200px;
 
                     h3 {
                         font-family: Raleway;
                         font-style: normal;
                         font-weight: bold;
                         font-size: 22px;
-                        line-height: 28px;
-                        /* identical to box height, or 127% */
+                        line-height: 127%;
+                        /* identical to box height, or 28px */
 
                         display: flex;
                         align-items: center;
@@ -397,8 +401,8 @@ main {
         font-style: normal;
         font-weight: 900;
         font-size: 44px;
-        line-height: 50px;
-        /* identical to box height, or 114% */
+        line-height: 114%;
+        /* identical to box height, or 50px */
 
         display: flex;
         align-items: center;
@@ -419,7 +423,7 @@ main {
 
         input {
             background: #F3F3F3;
-            width: 180px;
+            max-width: 180px;
             // height: 50px;
             padding: 2%;
             border-radius: 40px;
@@ -445,7 +449,7 @@ main {
             background: #FFEB38;
             border-radius: 40px;
 
-            width: 210px;
+            max-width: 210px;
             padding: 2%;
 
             box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.198681);
